objects/CVA_Survey__c.object
<CustomObject>
    <description>CVA Survey object stores information about customer visitation surveys that were conducted after approval/wf closes.</description>
    <fields>
        <fullName>CVA_Objective_Question__c</fullName>
        <inlineHelpText>Did you meet the objectives of the meeting ?</inlineHelpText>
        <label>CVA Objective Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVA__c</fullName>
        <label>CVA</label>
        <referenceTo>Visitation_Record__c</referenceTo>
        <relationshipLabel>CVA Survey</relationshipLabel>
        <relationshipName>CVA_Survey</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IMAGE(
IF(Survey_Score__c = 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Survey_Score__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Survey_Score__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Survey_Score__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Survey_Score__c = 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Satisfaction Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CVA_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Rating__c</fullName>
        <formula>IMAGE(
IF(Resolution_Score__c= 0, &quot;/img/samples/stars_000.gif&quot;,
IF(Resolution_Score__c= 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Resolution_Score__c= 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Resolution_Score__c= 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Resolution_Score__c= 4, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Score__c</fullName>
        <inlineHelpText>How would you rate your experience of Logistics Arrangement ?</inlineHelpText>
        <label>Resolution Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be check if survey finally submitted via CVA survey page.</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Comments__c</fullName>
        <inlineHelpText>How would you rate the overall experience of this visit/meeting?</inlineHelpText>
        <label>Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <inlineHelpText>How would you rate your experience of Fab Tour?</inlineHelpText>
        <label>Survey Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <label>UniqueId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>CVA Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CVA Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CVA Survey</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>